--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,9 +2,9 @@ version: "3"
 
 services:
   opsta-blog:
-    image: jekyll/jekyll:3.4.3
+    image: jekyll/minimal:3.5.0
     ports:
       - "4000:4000"
     volumes:
       - ".:/srv/jekyll"
-    command: /usr/local/bin/jekyll serve
+    command: jekyll serve
