--- a/_config.yml
+++ b/_config.yml
@@ -14,6 +14,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: Opsta Blog
+name: Opsta Blog
 email: contact@opsta.co.th
 description: > # We build scale
 baseurl: "" # the subpath of your site, e.g. /blog
@@ -25,3 +26,5 @@ theme: minima
 
 excerpt_separator: <!--more-->
 google_analytics: UA-130152-31
+author:
+  facebook: winggundamth
