Fix issue with author facebook :tea:

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -3,4 +3,5 @@ mrnonz:
   avatar: https://avatars1.githubusercontent.com/u/9113726?v=2&s=40
   github: mrnonz
   twitter: mrnonz
+  facebook: mrnonz
   web: http://mrnonz.com
